# ssot

./: .ssotignore  Cargo.toml  README.md  output.md
src/: main.rs
templates/: composer.md
