[package]
name = "ssot"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
dotenvy = "0.15.7"
file-format = "0.26.0"
git2 = "0.20.0"
humansize = "2.1.3"
octocrab = "0.43.0"
# serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
